--- a/IEEApps/IEEApps/Storyboards/AnnouncementsDesktop.storyboard
+++ b/IEEApps/IEEApps/Storyboards/AnnouncementsDesktop.storyboard
@@ -74,59 +74,71 @@
             </objects>
             <point key="canvasLocation" x="114" y="75"/>
         </scene>
-        <!--PrivateAnnDestop-->
-        <scene sceneID="uGy-pe-I2L">
+        <!--AnnDestop-->
+        <scene sceneID="n0x-wO-iAq">
             <objects>
-                <viewController storyboardIdentifier="PrivateAnnDesktop" title="PrivateAnnDestop" useStoryboardIdentifierAsRestorationIdentifier="YES" id="BRl-rx-oSh" customClass="PrivateAnnDesktop" customModule="IEEApps" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="Ckd-1a-uD2">
+                <viewController storyboardIdentifier="PrivateAnnDesktop" title="AnnDestop" useStoryboardIdentifierAsRestorationIdentifier="YES" id="BvP-Ty-NzX" customClass="PrivateAnnDesktop" customModule="IEEApps" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="bqJ-fz-fx5">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="m1T-Ps-LGy">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pkE-pu-nGS">
                                 <rect key="frame" x="15" y="59" width="45.5" height="31"/>
                                 <color key="tintColor" systemColor="labelColor"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" image="arrow.backward" catalog="system"/>
                                 <connections>
-                                    <action selector="goBack:" destination="BRl-rx-oSh" eventType="touchUpInside" id="8GW-Be-wdG"/>
+                                    <action selector="goBck:" destination="BvP-Ty-NzX" eventType="touchUpInside" id="vis-Oo-6tY"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M7w-K4-CsI">
-                                <rect key="frame" x="10" y="100" width="394" height="23"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="19"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pVE-hL-za0">
+                                <rect key="frame" x="10" y="92" width="394" height="21.5"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Body" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="2vZ-no-fxz">
-                                <rect key="frame" x="10" y="133" width="394" height="719"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <color key="textColor" systemColor="labelColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                            </textView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="A8d-La-cfg">
+                                <rect key="frame" x="0.0" y="133.5" width="414" height="728.5"/>
+                                <subviews>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="s1F-5q-N2f">
+                                        <rect key="frame" x="5" y="5" width="404" height="718.5"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <color key="textColor" systemColor="labelColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                    </textView>
+                                </subviews>
+                                <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="s1F-5q-N2f" secondAttribute="trailing" constant="5" id="1ix-SS-nDB"/>
+                                    <constraint firstAttribute="bottom" secondItem="s1F-5q-N2f" secondAttribute="bottom" constant="5" id="4ad-Cn-dIt"/>
+                                    <constraint firstItem="s1F-5q-N2f" firstAttribute="leading" secondItem="A8d-La-cfg" secondAttribute="leading" constant="5" id="DnW-gZ-bM9"/>
+                                    <constraint firstItem="s1F-5q-N2f" firstAttribute="top" secondItem="A8d-La-cfg" secondAttribute="top" constant="5" id="QLd-cJ-Esp"/>
+                                </constraints>
+                            </view>
                         </subviews>
-                        <viewLayoutGuide key="safeArea" id="g3s-hM-FuB"/>
+                        <viewLayoutGuide key="safeArea" id="Q2u-4S-Ezv"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="g3s-hM-FuB" firstAttribute="trailing" secondItem="2vZ-no-fxz" secondAttribute="trailing" constant="10" id="1Jh-AJ-SHB"/>
-                            <constraint firstItem="M7w-K4-CsI" firstAttribute="top" secondItem="m1T-Ps-LGy" secondAttribute="bottom" constant="10" id="Fst-P0-OMB"/>
-                            <constraint firstItem="m1T-Ps-LGy" firstAttribute="top" secondItem="g3s-hM-FuB" secondAttribute="top" constant="15" id="Ini-sI-YP4"/>
-                            <constraint firstItem="g3s-hM-FuB" firstAttribute="bottom" secondItem="2vZ-no-fxz" secondAttribute="bottom" constant="10" id="Odz-iL-LZH"/>
-                            <constraint firstItem="g3s-hM-FuB" firstAttribute="trailing" secondItem="M7w-K4-CsI" secondAttribute="trailing" constant="10" id="bF0-SB-5T5"/>
-                            <constraint firstItem="2vZ-no-fxz" firstAttribute="top" secondItem="M7w-K4-CsI" secondAttribute="bottom" constant="10" id="cUt-N7-WwA"/>
-                            <constraint firstItem="m1T-Ps-LGy" firstAttribute="leading" secondItem="g3s-hM-FuB" secondAttribute="leading" constant="15" id="cpG-ae-8n5"/>
-                            <constraint firstItem="M7w-K4-CsI" firstAttribute="leading" secondItem="g3s-hM-FuB" secondAttribute="leading" constant="10" id="gSB-Hw-lvV"/>
-                            <constraint firstItem="2vZ-no-fxz" firstAttribute="leading" secondItem="g3s-hM-FuB" secondAttribute="leading" constant="10" id="uqy-48-ydD"/>
+                            <constraint firstItem="pkE-pu-nGS" firstAttribute="leading" secondItem="Q2u-4S-Ezv" secondAttribute="leading" constant="15" id="1tL-X7-T7w"/>
+                            <constraint firstItem="A8d-La-cfg" firstAttribute="top" secondItem="pVE-hL-za0" secondAttribute="bottom" constant="20" id="22i-qs-HCm"/>
+                            <constraint firstItem="pkE-pu-nGS" firstAttribute="top" secondItem="Q2u-4S-Ezv" secondAttribute="top" constant="15" id="7Ug-kJ-0Z6"/>
+                            <constraint firstItem="Q2u-4S-Ezv" firstAttribute="bottom" secondItem="A8d-La-cfg" secondAttribute="bottom" id="ZfJ-Jy-19C"/>
+                            <constraint firstItem="A8d-La-cfg" firstAttribute="leading" secondItem="Q2u-4S-Ezv" secondAttribute="leading" id="jhb-P7-zio"/>
+                            <constraint firstItem="Q2u-4S-Ezv" firstAttribute="trailing" secondItem="pVE-hL-za0" secondAttribute="trailing" constant="10" id="n2y-od-1fs"/>
+                            <constraint firstItem="pVE-hL-za0" firstAttribute="top" secondItem="pkE-pu-nGS" secondAttribute="bottom" constant="2" id="p8f-CY-gwZ"/>
+                            <constraint firstItem="Q2u-4S-Ezv" firstAttribute="trailing" secondItem="A8d-La-cfg" secondAttribute="trailing" id="pfp-AS-C2t"/>
+                            <constraint firstItem="pVE-hL-za0" firstAttribute="leading" secondItem="Q2u-4S-Ezv" secondAttribute="leading" constant="10" id="yLX-gC-bsv"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="bodyTextView" destination="2vZ-no-fxz" id="wbP-rf-g8U"/>
-                        <outlet property="titleLabel" destination="M7w-K4-CsI" id="87N-c0-Rde"/>
+                        <outlet property="bodyTextView" destination="s1F-5q-N2f" id="bug-5C-9zg"/>
+                        <outlet property="titleLabel" destination="pVE-hL-za0" id="XJm-fL-7X9"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="8r9-HN-m7F" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Syy-AR-DLw" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="748" y="75"/>
+            <point key="canvasLocation" x="768" y="75"/>
         </scene>
     </scenes>
     <resources>
